--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
 title: Jordan Katz
-description: Market Making + Market Microstructure + Python
-show_downloads: true
-google_analytics:
+description: Mathematics Models and Calculated Risk Taking
 markdown: kramdown
 theme: jekyll-theme-minimal
 about: /aboutme.md
-rmdescription: A Resource for Introductory Market Making and Market Microstructure Theory
